# agentic-lawn-mower

./: .gitignore  ARTICLE.md  README.md  mower.py  pyproject.toml  requirements.txt  sandbox.txt
.claude/: launch.json
mower/: __init__.py  __main__.py  alerts.py  cli.py  client.py  codec.py  discovery.py  logger.py  monitor.py  payloads.py  repl.py
mower/web/: __init__.py  server.py
mower/web/static/: app.js  index.html  style.css
sensor/: README.md  __init__.py  accel_test.py  camera_snap.py  imu_logger.py  led_tilt.py  requirements.txt  server.py
sensor/systemd/: roboworm-camera-control.sudoers  roboworm-camera-snap.service  roboworm-sensor.service
tests/: test_alerts.py  test_codec.py  test_logger.py  test_payloads.py  test_scripts_syntax.py
